# fasion-mnist-principle-components

./: README.md  main.ipynb  main.py  pyproject.toml
